Add support for Openshift in helm
This adds a few new configuration options.
   * ingress.tls.{enabled, secretName}: if using a native ingress controller, enable TLS and use secretName for the certificate/key
   * limited_privs: limit service account to normal openshift user permissions (e.g. no 'get nodes'); default to false
   * shared_storage.custom_class: name of an already-defined storage class for the PVCs
   * use_security_context: use security contexts for pods; default to true

Additionally, this uses bitnami/nginx, bitnami/rabbitmq, and bitnami/postgresql since they are designed to run as non-privileged.

--- a/helm/reana/Chart.yaml
+++ b/helm/reana/Chart.yaml
@@ -35,3 +35,6 @@ dependencies:
     condition: traefik.enabled
     tags:
       - ingress
+  - name: rabbitmq
+    version: 8.15.3
+    repository: https://charts.bitnami.com/bitnami
